# forecast_clarify

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  environment.yml  requirements.txt  requirements_minimal.txt  setup.cfg  setup.py
.github/workflows/: build.yml  test.yaml
ci/: environment-py3.7.yml  environment-py3.8.yml
data/credentials/: credentials_ow_persistence.json
data/processed/: t3m_seasonal_cycle_nk800_2006-2022_ff.nc  t3m_seasonal_cycle_std_nk800_2006-2022_ff.nc  t3m_trend_nk800_2006-2022_ff.nc  temperature_insitu_3m_norkyst800_barentswatch_closest_20060101-20220920_persistence.nc
docs/: api.rst  conf.py  environment.yml  index.rst
forecast_clarify/: _version.py  clarify_persistence_package.py  config.py  main.py  train_model.py
notebooks/: 001_persistence_model.ipynb  002_intro_alexia.py  003_obs_pred_to_clarify.py  004_pers_fc_to_clarify.ipynb  005_evaluate.ipynb  006_test_sc_fit.ipynb  007_persistence_norkyst.ipynb  008_pers_model_allstat.ipynb  009_test_load.ipynb  009_train_model.py  010_test_load.ipynb
scripts/: 001_persistence_model.py  001_persistence_model.py~  write_to_clarify.py
src/forecast_clarify/: __init__.py  clarify_persistence_package.py  config.py  main.py  model_registry.py
src/forecast_clarify/data/processed/: temperature_insitu_3m_norkyst800_barentswatch_closest_20060101-20220920_seasonal_cycle.nc  temperature_insitu_3m_norkyst800_barentswatch_closest_20060101-20220920_seasonal_cycle_std.nc  temperature_insitu_3m_norkyst800_barentswatch_closest_20060101-20220920_trend.nc
tests/: test_config.py  test_dummy.py
