[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
select = C,E,F,W,B,B950
ignore = E203, E501, W503


[metadata]
name = forecast_clarify
version = attr: forecast_clarify.__version__
description = Local sea surface temperature weekly forecasts based on local statistics (seasonal cycle, week-to-week persistence) and coarse-resolution dynamical forecasts
author = Climate Futures, Clarify
url = https://github.com/olewu/forecast_clarify
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 5 - Production/Stable 
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    # Dont change this one
    License :: OSI Approved :: MIT License 

## Add your email here
author_email = owul@norceresearch.no, odd.gunnar@clarify.io


### make sure to fill in your dependencies!
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    requests
    xarray==2022.3.0
    scikit-learn==1.1.2

################ Up until here
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
* = *.nc, *.json